--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "er-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://shhtergal.github.io/er-website",
+  "homepage": "https://shhtergal.github.io/er-website",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "predeplot":"npm run build",
-    "deploy":"gh-pages -d build"
-    
+    "predeplot": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "list-react-files": "^0.2.0",
@@ -23,10 +22,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.1.12"
   }
 }
