--- a/amplify/package.json
+++ b/amplify/package.json
@@ -1,3 +1,12 @@
 {
-  "type": "module"
+  "name": "amplify-backend",
+  "private": true,
+  "type": "module",
+  "devDependencies": {
+    "@aws-amplify/backend": "^1.0.0",
+    "typescript": "^5.4.0"
+  },
+  "scripts": {
+    "build": "tsc -p ."
+  }
 }
