--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "er-website",
+  "name": "er-ratings",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shhtergal.github.io/er-website",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "predeplot": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint": "eslint"
   },
   "dependencies": {
-    "list-react-files": "^0.2.0",
-    "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "next": "16.0.1"
   },
   "devDependencies": {
-    "@aws-amplify/backend-cli": "^1.8.0",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^5.1.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "gh-pages": "^6.3.0",
+    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "vite": "^7.1.12"
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1"
   }
 }
